<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background">

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/blood_match_logo"
            android:layout_marginTop="35dp"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.431"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_long_logo" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="60dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/email_input"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Logo" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="248dp"
            android:layout_height="43dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="@dimen/margin_top_text_input"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:background="@drawable/bg_input_light_red"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="@color/hint_text"
            app:layout_constraintBottom_toTopOf="@+id/password_input"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="248dp"
            android:layout_height="43dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/bg_input_light_red"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_lock"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/hint_text"
            app:layout_constraintBottom_toTopOf="@+id/forget_password"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_input" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/forget_password"
            android:gravity="right"
            android:visibility="invisible"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/button_login"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_input_white"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/blood_color"
            app:layout_constraintBottom_toTopOf="@+id/register_now"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forget_password" />

        <TextView
            android:id="@+id/register_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="30dp"
            android:text="@string/don_t_have_an_account_register_now"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/button_login"
            app:layout_constraintBottom_toTopOf="@+id/slogan"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


        <ImageView
            android:id="@+id/slogan"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            app:srcCompat="@drawable/ic_slogan_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/blood_match_slogan" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>