<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="209dp">

        <!--time-->
        <EditText
            android:id="@+id/lastTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_text_input"
            android:background="@drawable/bg_input_light_red"
            android:inputType="date"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lastTime_desc"
            android:gravity="center"
            />

        <!--recency-->
        <EditText
            android:id="@+id/firstTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_text_input"
            android:background="@drawable/bg_input_light_red"
            android:inputType="date"
            android:padding="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstTime_desc"
            android:gravity="center"
            />

        <!--frequency-->
        <EditText
            android:id="@+id/frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_text_input"
            android:background="@drawable/bg_input_light_red"
            android:inputType="numberDecimal"
            android:padding="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frequency_desc"
            android:gravity="center"
            />

        <!--quantity-->
        <EditText
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_text_input"
            android:background="@drawable/bg_input_light_red"
            android:inputType="numberDecimal"
            android:padding="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity_desc"
            android:gravity="center"
            />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        android:outlineSpotShadowColor="@color/white"
        app:layout_constraintVertical_bias="1" />
</FrameLayout>