<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:background="@drawable/gradient_background">
    <ImageView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintBottom_toTopOf="@+id/group_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_long_logo"
        app:layout_constraintVertical_chainStyle="packed"
        android:contentDescription="@string/blood_match_logo" />
    <LinearLayout
        android:id="@+id/group_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_leftRight_text_input"
        android:layout_marginEnd="@dimen/margin_leftRight_text_input"
        app:layout_constraintTop_toBottomOf="@id/Logo"
        app:layout_constraintBottom_toTopOf="@id/slogan"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Forgot your password? "
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter your email below to reset your password"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input_light_red"
            android:hint="@string/email_prompt"
            android:layout_marginTop="40dp"
            android:textColorHint="@color/hint_text"
            android:inputType="textEmailAddress"
            android:padding="10dp"/>
        <Button
            android:id="@+id/button_reset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_input_white"
            android:text="@string/reset_button_text"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:textColor="@color/blood_color"
            />
    </LinearLayout>
    <ImageView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/ic_slogan_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/blood_match_slogan" />
</androidx.constraintlayout.widget.ConstraintLayout>