<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity"
    android:background="@color/blood_color">
    <include
        android:id="@+id/app_navbar"
        layout="@layout/navbar_layout"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="34dp" />
    <LinearLayout
        android:id="@+id/group_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/margin_leftRight_text_input"
        android:layout_marginEnd="@dimen/margin_leftRight_text_input"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Change your password?"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter your new password below to change your password"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/currentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input_light_red"
            android:hint="@string/current_password_prompt"
            android:layout_marginTop="40dp"
            android:textColorHint="@color/hint_text"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:gravity="center"/>
        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input_light_red"
            android:hint="@string/new_password_prompt"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/hint_text"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:gravity="center"/>
        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input_light_red"
            android:hint="@string/confirm_password_prompt"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/hint_text"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:gravity="center"/>
        <Button
            android:id="@+id/button_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_input_white"
            android:text="Change"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:textColor="@color/blood_color"
            />
    </LinearLayout>

</RelativeLayout>