<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonorProfileActivity"
    android:background="@color/blood_color">
    <include
        android:id="@+id/app_navbar"
        layout="@layout/navbar_layout"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/nav_height">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/picture"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="3dp" />
                <TextView
                    android:id="@+id/displayName"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:maxWidth="300dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="10pt"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Donation"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:id="@+id/donations"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/white"
                        android:text=".."
                        android:textSize="10pt"
                        android:textStyle="normal"
                        android:gravity="center"
                        android:layout_weight="1"
                        />
                </LinearLayout>
                <View
                    android:layout_marginTop="20dp"
                    android:layout_width="1dp"
                    android:layout_height="50dp"
                    android:background="@color/light_gray" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Units"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:layout_weight="1"
                        />

                    <TextView
                        android:id="@+id/units"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/white"
                        android:text=".."
                        android:textSize="10pt"
                        android:textStyle="normal"
                        android:gravity="center"
                        android:layout_weight="1"
                        />
                </LinearLayout>
                <View
                    android:layout_marginTop="20dp"
                    android:layout_width="1dp"
                    android:layout_height="50dp"
                    android:background="@color/light_gray" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Blood"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:layout_weight="1"
                        />

                    <TextView
                        android:id="@+id/blood"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/white"
                        android:text=".."
                        android:textSize="10pt"
                        android:textStyle="normal"
                        android:gravity="center"
                        android:layout_weight="1"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_leftRight_text_input"
                android:layout_marginEnd="@dimen/margin_leftRight_text_input"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                >

                <Button
                    android:id="@+id/phone_call"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_red"
                    android:drawableLeft="@android:drawable/sym_call_outgoing"
                    android:paddingLeft="20dp"
                    android:text="@string/phone_call"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="9pt" />

                <Button
                    android:id="@+id/text_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/light_red"
                    android:drawableLeft="@android:drawable/stat_notify_chat"
                    android:paddingLeft="20dp"
                    android:text="@string/text_message"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="9pt" />

                <Button
                    android:id="@+id/whatsApp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/light_red"
                    android:drawableLeft="@drawable/ic_whatsapp"
                    android:paddingLeft="20dp"
                    android:text="@string/whatsApp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="9pt" />
                <Button
                    android:id="@+id/check_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="20dp"
                    android:text="@string/check_in"
                    android:textAllCaps="false"
                    android:textColor="@color/blood_color"
                    android:textSize="9pt" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>